--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+   "axios": "^1.6.0",
     "nuxt": "^4.2.2",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
@@ -21,4 +22,3 @@
     "tailwindcss": "^3.4.19"
   }
 }
-
