--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.11.3",
     "axios": "^1.6.0",
+    "firebase": "^12.6.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
