feat: login проверка email/password, redirect на index

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.6.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
+    "srvx": "^0.9.8",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
